--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "performance-now": "^0.2.0",
     "raf": "^3.1.0",
-    "react-motion": "^0.4.1"
+    "react-motion": "^0.4.1",
+    "simple-signal": "0.0.1"
   }
 }
